Tests
Creación, validación, corrección y ejecución de los tests  para el Hito 2