@@ -26,9 +26,7 @@ dependencyManagement {
 }
 
 dependencies {
-
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-
     implementation 'org.springframework.boot:spring-boot-starter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
@@ -36,10 +34,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     // Para la persistencia de datos y mapeo objeto-relacional (ORM)
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    // Base de datos en memoria para pruebas
-    //runtimeOnly 'com.h2database:h2'
+    // Base de datos
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
-    // Lombok (Opcional) para generar Getters, Setters y Constructores
+    // Lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -50,16 +47,14 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok'
     // Spring Security
     implementation 'org.springframework.boot:spring-boot-starter-security'
-
-// JWT
+    // JWT
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
-
-    //implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
-
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
+    jvmArgs '-Xshare:off'
 }
